# DiscordOauth2Backup

./: README.md  example.env  main.py  pyproject.toml
discordoauth2backup/: app.py
