[tool.poetry]
name = "discordoauth2backup"
version = "0.1.0"
description = "backup user content using oauth2 tokens"
authors = ["Ben <ben.arteii@proton.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
discord-py = "^2.3.2"
fastapi = "^0.109.2"
uvicorn = { extras = ["standard"], version = "^0.27.1" }
httpx = "^0.27.0"
python-dotenv = "^1.0.1"
python-jose = "^3.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
